--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     margin:0;
 }
 body{
-    background-color: #f0f4f8;
+    background: linear-gradient(to right, #d7b7f5, #f4d6fc);
 }
 .heading{
     display: flex;
@@ -12,7 +12,7 @@ body{
     justify-content: center;
     min-height: 100vh;
     line-height: 1.75;
-    color: #1a202c;
+    color: #2d0032;
 }
 button{
     width:300px;
@@ -20,6 +20,10 @@ button{
     font-size:20px;
     font-weight: 700;
     border-radius:10px;
-    background-color: #4299e1; /* bright blue */
+    background-color: #38b2ac;
     color: white;
+}
+button:hover {
+    background-color: #2c7a7b;
+    cursor: pointer;
 }
