--- a/style_main.css
+++ b/style_main.css
@@ -37,8 +37,8 @@ select{
 }
 i{
     color:rgb(90, 85, 85);
-    margin-right:10px;
-    margin-left:10px;
+    margin-right:7px;
+    margin-left:7px;
 }
 button{
     width:200px;
@@ -46,14 +46,14 @@ button{
     border-radius:5px;
     font-size:20px;
     margin-top:13px;
-    background-color: #8f5de8;
+    background-color: #38b2ac;
     color: white;
     border: none;
     font-weight: 600;
     transition: background 0.3s ease;
 }
 button:hover {
-    background-color: #7a4dd7;
+    background-color: #2c7a7b;
     cursor: pointer;
 }
 .lang{
@@ -61,4 +61,5 @@ button:hover {
     height:50px;
     width:380px;
     text-align: center;
+    cursor:pointer;
 }
